[package]
name = "kungfu"
version = "0.1.12"
edition = "2021"
authors = ["yinheli <me@yinheli.com>"]
keywords = ["dns", "proxy", "hijacking", "transparent-proxy"]
categories = ["network-programming"]
license = "Apache-2.0"
description = """
Flexible DNS hijacking and proxy tool.
Read more: https://github.com/yinheli/kungfu
"""
repository = "https://github.com/yinheli/kungfu"
homepage = "https://github.com/yinheli/kungfu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
anyhow = "1"
num_cpus = "1"
tokio = { version = "1", features = ["full"] }
tokio-io-timeout = "1"
serde = "1"
serde_derive = "1"
serde_yaml = "0.9"
notify = "5"
regex = "1"
lazy_static = "1"
chrono = "0.4"
trust-dns-server = { version = "0.22", features = ["trust-dns-resolver"] }
async-trait = "0.1"
ipnet = "2"
lru = "0.8"
glob = "0.3.0"
rayon = "1"
tun = { version = "0.5", features = ["async"] }
futures = "0.3"
bytes = "1"
pnet = "0.31"
fast-socks5 = "0.8"
rand = "0.8"
url = "2"
prometheus = { version = "0.13", features = ["process"] }
hyper = { version = "0.14", features = ["full"] }


[dev-dependencies]
nu-pretty-hex = "0.69"

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = 'abort'
