[package]
name = "kungfu"
version = "0.1.27"
edition = "2021"
authors = ["yinheli <me@yinheli.com>"]
keywords = ["dns", "proxy", "hijacking", "transparent-proxy"]
categories = ["network-programming"]
license = "Apache-2.0"
description = """
Flexible DNS hijacking and proxy tool.
Read more: https://github.com/yinheli/kungfu
"""
repository = "https://github.com/yinheli/kungfu"
homepage = "https://github.com/yinheli/kungfu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
anyhow = { version="1", default-features = false }
num_cpus = "1"
tokio = { version = "1", features = ["full"] }
tokio-io-timeout = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
notify = "6"
notify-debouncer-mini = "0.4"
regex = "1"
lazy_static = "1"
chrono = "0.4"
hickory-server = { version = "0.24", features = ["hickory-resolver"] }
async-trait = "0.1"
ipnet = "2"
moka = { version = "0.12", features = ["sync"] }
glob = "0.3"
rayon = "1"
tun = { version = "0.6", features = ["async"] }
futures = "0.3"
bytes = "1"
pnet = "0.35"
fast-socks5 = "0.9"
rand = "0.8"
url = "2"
prometheus = { version = "0.13", features = ["process"] }
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }

[profile.release]
opt-level = 'z'
debug = false
debug-assertions = false
overflow-checks = false
lto = 'fat'
strip = true
codegen-units = 1
panic = 'abort'
