[package]
name = "kungfu"
version = "0.2.0"
edition = "2024"
authors = ["yinheli <me@yinheli.com>"]
keywords = ["dns", "proxy", "hijacking", "transparent-proxy"]
categories = ["network-programming"]
license = "Apache-2.0"
description = """
Flexible DNS hijacking and proxy tool.
Read more: https://github.com/yinheli/kungfu
"""
repository = "https://github.com/yinheli/kungfu"
homepage = "https://github.com/yinheli/kungfu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version="1", default-features = false }
arc-swap = "1"
async-trait = "0.1"
bimap = "0.6"
bytes = "1"
clap = { version = "4", features = ["derive"] }
env_logger = "0.11"
fast-socks5 = "0.10"
futures = "0.3"
glob = "0.3"
hickory-server = { version = "0.25", features = ["resolver"] }
http-body-util = "0.1"
hyper = { version = "1", features = ["full"] }
hyper-util = { version = "0.1", features = ["full"] }
ipnet = "2"
lazy_static = "1"
log = "0.4"
moka = { version = "0.12", features = ["sync", "future"] }
notify = "8"
notify-debouncer-mini = "0.7"
num_cpus = "1"
parking_lot = "0.12"
pnet = "0.35"
prometheus = { version = "0.14", features = ["process"] }
rand = "0.9"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
tokio = { version = "1", features = ["full"] }
tun-rs = { version = "2", features = ["async"] }
url = "2"

[profile.release]
incremental = false
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = 'fat'
strip = true
codegen-units = 1
panic = 'abort'
